--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -16,3 +16,7 @@ jobs:
           project: 'public'
           login: ${{ secrets.SURGE_LOGIN }}
           token: ${{ secrets.SURGE_TOKEN }}
+      - name: Limpeza de logs antigos
+        run: bash actions-cleanup.sh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
