--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -5,6 +5,25 @@ on:
       - 'main'
   workflow_dispatch:
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+        with:
+          ruby-version: '3.1' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Build with Jekyll
+        # Outputs to the './_site' directory by default
+        run: |
+          git clone https://github.com/rauldipeas/blog
+          cd blog
+          bundle
+          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+          mv _site ../public/blog
+        env:
+          JEKYLL_ENV: production
   deploy:
     runs-on: ubuntu-latest
     steps:
