--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -20,7 +20,7 @@ jobs:
           git clone https://github.com/rauldipeas/blog
           cd blog
           bundle
-          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+          bundle exec jekyll build
           mv _site ../public/blog
         env:
           JEKYLL_ENV: production
