--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -15,9 +15,8 @@ jobs:
           ruby-version: '3.1'
           bundler-cache: true
           cache-version: 0
-      - name: Build with Jekyll
+      - name: Compilação do 1Jekyll
         run: |
-          git clone https://github.com/rauldipeas/blog
           cd blog
           bundle
           bundle exec jekyll build
