--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           cd blog
           bundle
+          bundle install
           bundle exec jekyll build
           mv _site ../site/blog
         env:
