--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -62,7 +62,7 @@ google_analytics:
 counter:
   data-id: 8d4724e6-4333-41ef-bed4-3caf12ce80e8
 
-crips:
+crisp:
   id: 896e35ed-eba0-4be0-a0f8-da0b0b95a8d5
 
 # Prefer color scheme setting.
