--- a/blog/_data/contact.yml
+++ b/blog/_data/contact.yml
@@ -6,6 +6,10 @@
 - type: twitter
   icon: "fab fa-twitter"
 
+- type: mastodon
+  icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
+  url:  'https://mastodon.social/@raul_dipeas'                  # Fill with your Mastodon account page, rel="me" will be applied for verification
+
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
@@ -14,11 +18,6 @@
   icon: "fas fa-rss"
   noblank: true
 # Uncomment and complete the url below to enable more contact options
-#
-# - type: mastodon
-#   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
-#
 # - type: linkedin
 #   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
 #   url:  ''                  # Fill with your Linkedin homepage
