--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -95,7 +95,7 @@ comments:
   active: flarum # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   flarum:
-    address: https://rauldipeas.flarum.cloud
+    address: rauldipeas.flarum.cloud
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
