--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -92,10 +92,8 @@ avatar: https://raw.githubusercontent.com/rauldipeas/rauldipeas/main/avatar.gif
 toc: true
 
 comments:
-  active: discussbot # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: flarum # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
-  discussbot:
-    website: gExAcg-9
   flarum:
     address: https://rauldipeas.flarum.cloud
   disqus:
