--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -92,10 +92,12 @@ avatar: https://raw.githubusercontent.com/rauldipeas/rauldipeas/main/avatar.gif
 toc: true
 
 comments:
-  active: flarum # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: metype # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   flarum:
     address: https://rauldipeas.flarum.cloud
+  metype:
+    id: 1000432
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
