--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -95,7 +95,7 @@ comments:
   active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   flarum:
-    address: https://rauldipeas.flarum.cloud
+    address: # https://rauldipeas.flarum.cloud
   metype:
     id: 1000432
   disqus:
