--- a/.github/workflows/git-sync.yml
+++ b/.github/workflows/git-sync.yml
@@ -1,13 +1,13 @@
-name: Implantação no Surge
+name: Syncronização de backup do repositório
 on: push
 jobs:
     sync:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@master
-        # with:
-          # persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-          # fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
       - name: Enviar para o Forgejo (Disroot)
         uses: liziwl/git-push-action@master
         with:
@@ -19,4 +19,4 @@ jobs:
           repository_url: 'https://git.disroot.org/rauldipeas/rauldipeas.surge.sh.git'
           branch: main # default master
           commit_message: 'Push by action bot' # default "Deploy ${{ github.sha }}"
-          # keep_history: false # default false, not keep history
+          keep_history: false # default false, not keep history
