--- a/.github/workflows/git-sync.yml
+++ b/.github/workflows/git-sync.yml
@@ -5,18 +5,5 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@master
-        with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-      - name: Enviar para o Forgejo (Disroot)
-        uses: liziwl/git-push-action@master
-        with:
-          git_token_holder: 'rauldipeas'
-          git_token: '${{ secrets.FORGEJO_TOKEN }}'
-          commit_user: 'rauldipeas'
-          commit_email: 'rauldipeas@disroot.org'
-          push_dir: '.'
-          repository_url: 'https://git.disroot.org/rauldipeas/rauldipeas.surge.sh.git'
-          branch: main # default master
-          commit_message: 'Push by action bot' # default "Deploy ${{ github.sha }}"
-          keep_history: false # default false, not keep history
+        run: |
+            git push . https://${{ secrets.FORGEJO_TOKEN }}@git.disroot.org/rauldipeas/rauldipeas.surge.sh.git
