--- a/.github/workflows/git-sync.yml
+++ b/.github/workflows/git-sync.yml
@@ -4,6 +4,6 @@ jobs:
     sync:
       runs-on: ubuntu-latest
       steps:
-      - uses: actions/checkout@master
-        run: |
-            git push . https://${{ secrets.FORGEJO_TOKEN }}@git.disroot.org/rauldipeas/rauldipeas.surge.sh.git
+        - name: Enviar para o Forgejo (Disroot)
+          uses: actions/checkout@master
+          run: git push . https://${{ secrets.FORGEJO_TOKEN }}git.disroot.org/rauldipeas/rauldipeas.surge.sh.git
