--- a/blog/_data/contact.yml
+++ b/blog/_data/contact.yml
@@ -3,12 +3,12 @@
 # - type: github
 #   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fab fa-twitter"
+#- type: twitter
+#  icon: "fab fa-twitter"
 
-#- type: mastodon
-#  icon: 'fab fa-mastodon'                       # icons powered by <https://fontawesome.com/>
-#  url:  'https://mastodon.social/@raul_dipeas'  # Fill with your Mastodon account page, rel="me" will be applied for verification
+- type: mastodon
+  icon: 'fab fa-mastodon'                       # icons powered by <https://fontawesome.com/>
+  url:  'https://mastodon.social/@raul_dipeas'  # Fill with your Mastodon account page, rel="me" will be applied for verification
 
 #- type: forum
 #  icon: 'fas fa-life-ring'
