--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -4,8 +4,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Conferência do repositório
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Instalação do Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -21,7 +20,10 @@ jobs:
           project: 'site'
           login: ${{ secrets.SURGE_LOGIN }}
           token: ${{ secrets.SURGE_TOKEN }}
-      - name: Limpeza de logs antigos
-        run: bash scripts/actions-cleanup.sh
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      - uses: otto-de/purge-deprecated-workflow-runs@v2
+        with:
+          remove-cancelled: true
+          remove-failed: true
+          remove-obsolete: false
+          token: ${{ secrets.PAT }}
+          #remove-older-than: 7d
