--- a/blog/_data/share.yml
+++ b/blog/_data/share.yml
@@ -4,7 +4,7 @@
 platforms:
   - type:
     icon: "fab fa-mastodon"
-    link: "https://mastodonshare.com/?text=TILE&url=URL"
+    link: "https://tootpick.org/#text=TITLE"
 
   - type: Twitter
     icon: "fab fa-twitter"
