--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
           source_file: 'site'
           destination_repo: 'rauldipeas/rauldipeas.github.io'
           destination_folder: '/'
+          destination_branch_create: 'gh-pages'
           destination_branch: 'gh-pages'
           user_email: 'github.rauldipeas@lock.email'
           user_name: 'rauldipeas'
