--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,21 @@
 name: Implantação
 on: push
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Instalação do Ruby
-        uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
       - name: Compilação do Jekyll
         run: bundle exec jekyll build -s blog -d site/blog
         env:
           JEKYLL_ENV: production
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Envio para o Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
         with:
