--- a/blog/_data/share.yml
+++ b/blog/_data/share.yml
@@ -4,7 +4,7 @@
 platforms:
   - type:
     icon: "fab fa-mastodon"
-    link: "https://tootpick.org/#text=TITLE%20https://rauldipeas.pages.devURL"
+    link: "https://tootpick.org/#text=TITLE%20https://rauldipeas.com.brURL"
 
   - type: Twitter
     icon: "fab fa-twitter"
