--- a/social/_config.yml
+++ b/social/_config.yml
@@ -8,7 +8,7 @@ title: "Raul Dipeas"
 description: > # this means to ignore newlines until "email:"
    Acompanhe minhas postagens
 
-email: rauldipeas@disroot.org
+email: ""
 #blog logo
 logo: "https://rauldipeas.com.br/assets/images/avatar.jpg"
 float_logo: false # true, false (default)
@@ -22,8 +22,8 @@ author_image: "https://rauldipeas.com.br/assets/images/avatar.jpg"
 
 paginate:	5
 
-url: "" # the base hostname & protocol for your site
-baseurl: ""
+url: "https://rauldipeas.com.br" # the base hostname & protocol for your site
+baseurl: "/social"
 #used to display twitter cards
 twitter_handle: ''
 
