--- a/social/_config.yml
+++ b/social/_config.yml
@@ -22,7 +22,7 @@ author_image: "https://rauldipeas.com.br/assets/images/avatar.jpg"
 
 paginate:	5
 
-url: "https://rauldipeas.com.br" # the base hostname & protocol for your site
+url: "rauldipeas.com.br/social" # the base hostname & protocol for your site
 baseurl: "/social"
 #used to display twitter cards
 twitter_handle: ''
