--- a/social/_config.yml
+++ b/social/_config.yml
@@ -23,7 +23,7 @@ author_image: "https://rauldipeas.com.br/assets/images/avatar.jpg"
 paginate:	5
 
 url: "rauldipeas.com.br" # the base hostname & protocol for your site
-baseurl: "./social"
+baseurl: "/social"
 #used to display twitter cards
 twitter_handle: ''
 
