+mastodon-to-markdown ^deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,10 @@ jobs:
         run: bundle exec jekyll build -s blog -d site/blog
         env:
           JEKYLL_ENV: production
+      - name: Sincronização com o Mastodon
+        run: |
+          bash scripts/mastodon-to-markdown.sh
+          mv posts/*.sh social/_posts
       - name: Compilação do Jekyll (social)
         run: bundle exec jekyll build -s social -d site/social
         env:
