--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Sincronização com o Mastodon
         run: |
           bash scripts/mastodon-to-markdown.sh
-          mv posts/*.md social/_posts
+          mv -v posts/*.md social/_posts
       - name: Compilação do Jekyll (social)
         run: bundle exec jekyll build -s social -d site/social
         env:
